# pirates

./: .env  .gitignore  README.md  docker-compose.yml  eval-logs.py  parameters.py  run-benchmarks.py
FastPIR/src/: CMakeLists.txt  client.cpp  client.hpp  server.cpp  server.hpp
audio/: raw.aup3
callee/: CMakeLists.txt  Dockerfile  cmake_install.cmake
callee/src/: CMakeLists.txt  Dockerfile  callee.cpp  serialization_helper.h
caller/: CMakeLists.txt  Dockerfile  birch_encoded  peter.lpc  raw_encoded
caller/src/: caller.cpp  logging_helper.h
client/: CMakeLists.txt  Dockerfile
client/src/: client.cpp
delay-tolerance/: sound_test.py  survey.md
evalscripts/: sound_test.py
master/: CMakeLists.txt  Dockerfile
master/src/: master.cpp
relay/: CMakeCache.txt  CMakeLists.txt  Dockerfile  Makefile  cmake_install.cmake
relay/src/: relay.cpp
tests/encdec/: Dockerfile
tests/encdec/src/: client.cpp
worker/: CMakeLists.txt  Dockerfile
worker/src/: params.h  worker.cpp
~/.vim/tmp/: caller.cpp.swp  relay.cpp.swp  worker.cpp.swp
